# sunderclip

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts
.github/workflows/: main.yml
public/libs/fontawesome/: all.css  sharp-light.css  sharp-regular.css  sharp-solid.css  sharp-thin.css
public/pages/: splashscreen.html
public/scripts/: disableBrowserBehaviour.js
src/: App.module.css  App.tsx  index.tsx  styles.css  util.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs
src-tauri/src/commands/: close_splashscreen.rs  extract_audio.rs  ffprobe_cmd.rs  get_encoders.rs  get_hwaccels.rs  mod.rs  render.rs  show_in_folder.rs  toggle_fullscreen.rs
src-tauri/src/protocols/: extract_audio.rs  mod.rs
src/classes/: Menubar.ts  Renderer.ts
src/components/audio_panel/: AudioMixer.module.css  AudioMixer.tsx
src/components/export_overlay/: ExportOverlay.module.css  ExportOverlay.tsx  ExportOverlayContainer.tsx
src/components/export_panel/: Codecs.ts  Export.module.css  Export.tsx
src/components/media_info_panel/: MediaInfo.module.css  MediaInfo.tsx
src/components/overlay/: Overlay.module.css  Overlay.tsx
src/components/panel/: Panel.module.css  Panel.tsx  PanelCommon.module.css
src/components/progress_bar/: ProgressBar.module.css  ProgressBar.tsx  ProgressBar.tsx.tsx
src/components/timeline/: Timeline.module.css  Timeline.tsx
src/components/video_player/: Player.module.css  Player.tsx
src/components/welcome_overlay/: Welcome.module.css  Welcome.tsx
src/configs/: dayjs.ts
src/contexts/: AppContext.tsx  PlayerContext.tsx
