[package]
name = "sunderclip"
version = "0.0.0"
description = "Sunderclip app"
authors = ["Emperor of Bluegaria"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.2"

tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
urlencoding = "2.1.3"
zstd = "0.13.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
